# hacs-nature-remo2

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  .test.txt  CLAUDE.md  CONTRIBUTING.md  README.md  hacs.json  info.md  manifest.json  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg
.claude/: academic-knowledge.md  common-patterns.md  context.md  debug-log.md  project-improvements.md  project-knowledge.md
.claude/commands/: fix_error.md  learning.md  orchestrator.md
.claude/debug/archive/pytest_fix_all_2025-06-18/: final_summary.md  plan.md  pytest_final_run.txt  pytest_initial_run.txt  step_by_step.md
.claude/debug/archive/uv-setup/: plan.md  step_by_step.md
.claude/debug/sessions/pytest_error_analysis_2025-06-18/: async_generator_fix.md  fix_plan.md  fix_summary.md  plan.md  pytest_final_results.txt  pytest_output.txt  pytest_output_after_fixes.txt  step_by_step.md
.claude/debug/temp-logs/: pytest_errors.md
.devcontainer/: configuration.yaml  devcontainer.json
.github/workflows/: constraints.txt  tests.yaml
custom_components/hacs-nature-remo/: __init__.py  manifest.json
custom_components/hacs_nature_remo/: __init__.py  api.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinators.py  entity.py  manifest.json  sensor.py  switch.py  utils.py
custom_components/hacs_nature_remo/api/: __init__.py  wrapper.py
custom_components/hacs_nature_remo/domain/: climate.py  config_schema.py  const.py  logger.py
custom_components/hacs_nature_remo/translations/: fr.json  ja.json  nb.json
tests/: __init__.py  conftest.py  const.py  test_api.py  test_config_flow.py  test_init.py  test_switch.py
