[project]
name = "hacs-nature-remo2"
version = "0.1.1"
description = "Home Assistant Custom Component for Nature Remo integration"
readme = "README.md"
authors = [
    { name = "kkiyama117", email = "k.kiyama117@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "nature-remo-fork-only-for-hacs-nature-remo>=0.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components"]

[dependency-groups]
dev = [
    "homeassistant>=2025.1.4",
    "nature-remo-fork-only-for-hacs-nature-remo>=0.3.3",
    "pre-commit>=2.9.3",
    "black>=20.8b1",
    "flake8>=3.8.4",
    "isort>=5.0.0",
    "reorder-python-imports>=2.3.6",
    "ruff>=0.11.13",
]
test = [
    "pytest>=7.0.0",
    "pytest-homeassistant-custom-component>=0.13.236",
    "pytest-cov>=2.12.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=2.5.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "custom_components"]
testpaths = ["tests"]
addopts = "-qq --cov=custom_components.hacs_nature_remo --timeout=9 --durations=10"
console_output_style = "count"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as an asyncio coroutine",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

[tool.setuptools.package-data]
"*" = ["*.json", "translations/*.json"]

[tool.coverage.run]
branch = false
source = ["custom_components/hacs_nature_remo"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
indent = "    "
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["custom_components.hacs_nature_remo", "tests"]
combine_as_imports = true
force_sort_within_sections = true

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''
